# Portofolio

./: .gitignore  AGENTS.md  PORTFOLIO_RUNBOOK.md  PROFILE_README.md  README.md  portfolio-launcher.sh
Automated Infrastructure & Deployment Platform/: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
Cloud-Native E-Commerce Platform/: .env.example  .gitignore  CODE_OF_CONDUCT.md  Makefile  (+4 more)
LLMOps Evaluation Harness/: .env.example  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
LLMOps Evaluation Harness/datasets/: qa_basic.jsonl  qa_with_context.jsonl
LLMOps Evaluation Harness/src/eval_harness/: cli.py  metrics.py  runner.py  storage.py  types.py
LLMOps Evaluation Harness/src/eval_harness/models/: __init__.py  base.py  http.py  mock.py
LLMOps Evaluation Harness/tasks/: basic.json  contextual.json
LLMOps Evaluation Harness/tests/: test_metrics.py  test_runner.py
Prompt Quality & Safety/: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
Prompt Quality & Safety/datasets/: injection.jsonl  quality.jsonl  safety.jsonl
Prompt Quality & Safety/prompts/: injection_system.txt  quality_system.txt  safety_system.txt
Prompt Quality & Safety/src/prompt_quality_safety/: __init__.py  cache.py  cli.py  datasets.py  guardrails.py  metrics.py  models.py  prompts.py  runner.py
Prompt Quality & Safety/suites/: default.json
Prompt Quality & Safety/tests/: test_guardrails.py  test_metrics.py  test_runner.py
(+578 files in other folders)
