[project]
name = "prompt-quality-safety"
version = "0.1.0"
description = "Evidence-driven prompt quality and safety evaluation harness."
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
